--- a/pom.xml
+++ b/pom.xml
@@ -181,7 +181,7 @@
 	<repositories>
 		<repository>
 			<id>aliyun-pom-repos</id>
-			<url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+			<url>https://maven.aliyun.com/nexus/content/groups/public/</url>
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
@@ -191,7 +191,7 @@
 	<pluginRepositories>
 		<pluginRepository>
 			<id>aliyun-pom-plugin</id>
-			<url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+			<url>https://maven.aliyun.com/nexus/content/groups/public/</url>
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
